# agent-assistant

./: .env.example  .gitignore  .subagent_registry.json  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_COMPARISON.md  ASR_2025_Research_Report.md  BUILD_FROM_ZERO.md  DETAILED_TASKS.md  DEVELOPMENT_PLAN.md  DUAL_MODE_INTEGRATION_PLAN.md  GIT_WORKFLOW.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_TEST_PLAN.md  MCP_INTEGRATION.md  MEMORY_SYSTEM_USAGE.md  MULTIMODAL_DESIGN.md  PHASE5_IMPLEMENTATION_REPORT.md  README.md  REALISTIC_TASKS.md  TECHNICAL_TASKS.md  _run_browser_test.py  pyproject.toml  test_memory_system.py  test_skill_tier.py  tetris.html  verify_all.py
aiagent/: __init__.py  agent.py  daily_log.py  error_parser.py  errors.py  git_utils.py  main.py  memory_manager.py  resource_bridge.py  serve.py  session_manager.py  session_store.py  skill_security.py  skills.py  subagent.py  subagent_registry.py  subagent_tools.py  subagent_workspace.py  token_utils.py  web_ui.html  workspace.py
docs/: BRANCH_HISTORY.md  BRANCH_SUMMARY_SKILL_SECURITY_TIER.md  DEERFLOW_SKILL_ANALYSIS.md  ERROR_HANDLING.md  ERROR_STANDARDIZATION_PLAN.md  FMS_INTEGRATION_PLAN.md  FMS_INTEGRATION_SUMMARY.md  NAS_FMS_INTEGRATION_DESIGN.md  PHASE5_IMPLEMENTATION_PLAN.md  PHASE5_WEEK4_SKILL_SECURITY_PLAN.md  SESSION_LEVEL_SUMMARY_DESIGN.md  SESSION_SUMMARY_IMPLEMENTATION_REPORT.md  SKILL_SECURITY_TIER_IMPLEMENTATION.md  memory-design.md
tests/: README.md  run_all.py  test_e2e_llm.py  test_error_handling.py  test_find_skills_skill.py  test_fms.py  test_new_tools.py  test_research_skill.py  test_skills.py  (+2 more)
(+152 files in other folders)
